# logcli

./: README.md  info.json  pyproject.toml  test.sh
examples/configs/: sample.yml
examples/logs/: sample.jsonl  sampleoutput.json
logcli/: cli.py  filters.py  main.py  metrics.py  output.py  parser.py  pyproject.toml  reader.py
logcli/handlers/: analyze.py  watch.py
src/logcli/: analyze.py  cli.py  filters.py  main.py  metrics.py  reader.py  watch.py
tests/: test_analyze.py  test_watch.py
